--- a/index.html
+++ b/index.html
@@ -3,37 +3,176 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Keerthana R | Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(120deg, #1a2a6c, #b21f1f, #fdbb2d);
+      background-size: 400% 400%;
+      animation: gradientBG 12s ease infinite;
+      color: white;
+    }
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    header {
+      text-align: center;
+      padding: 50px 20px 20px;
+    }
+    header img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      border: 3px solid white;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      animation: fadeIn 2s ease;
+    }
+    header h1 {
+      margin-top: 15px;
+      font-size: 2.5em;
+      animation: slideIn 1.5s ease;
+    }
+    header p {
+      font-size: 1.2em;
+      opacity: 0.9;
+    }
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 30px;
+    }
+    h2 {
+      border-bottom: 2px solid white;
+      display: inline-block;
+      padding-bottom: 5px;
+      margin-bottom: 15px;
+    }
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .skill {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 10px 15px;
+      border-radius: 20px;
+      animation: popIn 0.8s ease;
+      transition: background 0.3s;
+    }
+    .skill:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .projects .project {
+      margin-bottom: 20px;
+      padding: 15px;
+      border-left: 4px solid white;
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 8px;
+      animation: fadeInUp 1s ease;
+    }
+    .project a {
+      color: yellow;
+      text-decoration: none;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9em;
+      opacity: 0.8;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes slideIn {
+      from { transform: translateY(-20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+    @keyframes popIn {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
+    }
+    @keyframes fadeInUp {
+      from { transform: translateY(20px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Your Name</h1>
-    <p>Full Stack Developer | React | Node.js</p>
-  </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I’m a passionate full stack developer with skills in React, Node.js, and database management.
-       I’ve worked on projects such as GATserve (campus food waste reduction app) and a malicious URL detection tool.</p>
-  </section>
+<header>
+  <img src="profile.jpg" alt="Keerthana R">
+  <h1>Keerthana R</h1>
+  <p>Full Stack Developer | AI & Data Science Enthusiast</p>
+</header>
 
-  <section>
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>GATserve:</strong> Smart engagement app to reduce campus food waste.</li>
-      <li><strong>Malicious URL Detection:</strong> Machine learning tool for online safety.</li>
-    </ul>
-  </section>
+<section>
+  <h2>About Me</h2>
+  <p>I am a dedicated and ambitious Computer Science student with strong skills in Java, Python, and C. 
+  I have experience in building full-stack applications and machine learning solutions, 
+  and I am passionate about creating impactful real-world applications.</p>
+</section>
 
-  <section>
-    <h2>Contact</h2>
-    <p>Email: your@email.com</p>
-    <p>GitHub: <a href="https://github.com/YOUR_USERNAME" target="_blank">github.com/YOUR_USERNAME</a></p>
-  </section>
+<section>
+  <h2>Skills</h2>
+  <div class="skills">
+    <div class="skill">Java</div>
+    <div class="skill">Python</div>
+    <div class="skill">C</div>
+    <div class="skill">JavaScript</div>
+    <div class="skill">HTML</div>
+    <div class="skill">CSS</div>
+    <div class="skill">ReactJS</div>
+    <div class="skill">NodeJS</div>
+    <div class="skill">AngularJS</div>
+    <div class="skill">SQL</div>
+    <div class="skill">MongoDB</div>
+    <div class="skill">PowerBI</div>
+    <div class="skill">Tableau</div>
+    <div class="skill">Express.js</div>
+    <div class="skill">REST APIs</div>
+    <div class="skill">Postman</div>
+  </div>
+</section>
 
-  <footer>
-    <p>© 2025 Your Name</p>
-  </footer>
+<section class="projects">
+  <h2>Projects</h2>
+
+  <div class="project">
+    <h3>GATserve</h3>
+    <p>Smart engagement app to reduce campus food waste by connecting students and staff.</p>
+    <p><strong>Tech:</strong> React, Node.js, MongoDB, Express</p>
+  </div>
+
+  <div class="project">
+    <h3>Malicious URL Detection</h3>
+    <p>Machine learning-based tool for classifying URLs as safe or malicious.</p>
+    <p><strong>Tech:</strong> Python, Flask, scikit-learn</p>
+  </div>
+
+  <div class="project">
+    <h3>AirCargo Analysis</h3>
+    <p>Web-based system for managing air cargo bookings and logistics.</p>
+    <p><strong>Tech:</strong> React, Node.js, Express, MySQL</p>
+    <a href="https://github.com/Starplayevryr/AirCargo-Analysis" target="_blank">View on GitHub</a>
+  </div>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:keerthanar1ga22cs083@gmail.com">keerthanar1ga22cs083@gmail.com</a></p>
+  <p>GitHub: <a href="https://github.com/Starplayevryr" target="_blank">github.com/Starplayevryr</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/keerthana-r-a95955294/" target="_blank">linkedin.com/in/keerthana-r</a></p>
+  <p><a href="KeerthanaR_resume_083.pdf" target="_blank">Download Resume</a></p>
+</section>
+
+<footer>
+  <p>© 2025 Keerthana R</p>
+</footer>
+
 </body>
 </html>
